# test_basic_demo

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  foo.cpp  foo.h
tests/: CMakeLists.txt  test.cpp
